# football-forecasting-engine

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  README_HE.md  pyproject.toml  requirements-app.txt  requirements-boosting.txt  requirements.txt
.github/: copilot-instructions.md
app/: streamlit_app.py
configs/: data_sources.yaml  features.yaml  project.yaml
docs/: DATA_CONTRACTS.md  DATA_SOURCES.md  EVALUATION.md  IMPLEMENTATION_PLAN.md  MODEL_CARD_TEMPLATE.md  PLAYER_DATA.md  REPOSITORY_GUIDE.md  WORLDCUP_SIMULATION.md
models/: world_cup_2026_champion.metadata.json  world_cup_2026_player_scorer.metadata.json
notebooks/: high_confidence_accuracy.ipynb  player_features_model_evaluation.ipynb  world_cup_2026_real_models.ipynb
prompts/: ANTIGRAVITY_TASKS.md  CODEX_TASKS.md
reports/: MODEL_CARD.md  current_data_audit.json  data_audit_1990_2026-06-10.json
scripts/: augment_player_features.py  build_player_notebook.py  build_real_models_notebook.py  build_selective_accuracy_notebook.py  build_world_cup_now_report.py  create_snapshot.py  evaluate_selective_accuracy.py  finalize_champion_model.py  finalize_player_model.py  ingest_fifa_rankings.py  ingest_goalscorers.py  ingest_international.py  ingest_openfootball.py  ingest_player_snapshots.py  prepare_real_data.py  rebuild_all_features.py  run_advanced_model_search.py  run_backtest.py  run_fifa_boosting_search.py  run_fifa_model_search.py  run_player_model_search.py  run_real_model_search.py  run_sample_pipeline.py  run_structured_model_search.py  validate_data.py
(+124 files in other folders)
