[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-forecasting-engine"
version = "0.4.0"
description = "Leakage-safe probabilistic football forecasting and tournament simulation"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Bar Shaulian"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "pydantic>=2.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
app = ["streamlit>=1.30", "plotly>=5.18"]
boosting = ["catboost>=1.2", "lightgbm>=4.0"]
dev = ["pytest>=7.4", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
